force-app/main/default/objects/Accolade__c/Accolade__c.object-meta.xml
<CustomObject>
    <description>NI Custom Object that holds Accolade Data.</description>
    <label>Accolade</label>
    <nameField>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>Accolade Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accolades</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>