force-app/main/default/objects/Accolade__c/fields/AccoladeDate__c.field-meta.xml
<CustomField>
    <fullName>AccoladeDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Accolade Date</label>
    <type>Date</type>
</CustomField>