force-app/main/default/objects/Accolade__c/fields/AccoladeTitle__c.field-meta.xml
<CustomField>
    <fullName>AccoladeTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accolade Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>