force-app/main/default/objects/Accolade__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accolades</relationshipLabel>
    <relationshipName>Accolades</relationshipName>
    <type>Lookup</type>
</CustomField>