force-app/main/default/objects/Accolade__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accolades</relationshipLabel>
    <relationshipName>Accolades</relationshipName>
    <type>Lookup</type>
</CustomField>