force-app/main/default/objects/Accolade__c/fields/UserDivision__c.field-meta.xml
<CustomField>
    <fullName>UserDivision__c</fullName>
    <formula>Recipient__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Division</label>
    <type>Text</type>
</CustomField>