force-app/main/default/objects/Accolade__c/listViews/All_Accolades.listView-meta.xml
<ListView>
    <fullName>All_Accolades</fullName>
    <columns>NAME</columns>
    <columns>Recipient__c</columns>
    <columns>AccoladeTitle__c</columns>
    <columns>AccoladeDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accolades</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>