force-app/main/default/objects/Accolade__c/listViews/APAC_Accolades.listView-meta.xml
<ListView>
    <fullName>APAC_Accolades</fullName>
    <columns>NAME</columns>
    <columns>Recipient__c</columns>
    <columns>AccoladeTitle__c</columns>
    <columns>AccoladeDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserDivision__c</field>
        <operation>equals</operation>
        <value>AP</value>
    </filters>
    <label>APAC Accolades</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>