force-app/main/default/objects/Accolade__c/listViews/EMEA_Accolades.listView-meta.xml
<ListView>
    <fullName>EMEA_Accolades</fullName>
    <columns>NAME</columns>
    <columns>Recipient__c</columns>
    <columns>AccoladeTitle__c</columns>
    <columns>AccoladeDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserDivision__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA Accolades</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>