force-app/main/default/objects/Accolade__c/listViews/X2012_Accolades.listView-meta.xml
<ListView>
    <fullName>X2012_Accolades</fullName>
    <columns>NAME</columns>
    <columns>AccoladeDate__c</columns>
    <columns>AccoladeTitle__c</columns>
    <columns>Recipient__c</columns>
    <columns>UserDivision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccoladeDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2012</value>
    </filters>
    <filters>
        <field>AccoladeDate__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2012</value>
    </filters>
    <label>2012 Accolades</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>